@@ -19,6 +19,7 @@
 - updated: `U.download()` by adding `param` argument
 - updated: `U.request()` by adding `param` argument
 - updated: `schema.cl(name, [value])` method by adding `value` argument for replacing of existing code-list
+- updated: Tangular version to `v4.0.0`
 
 - improved: `filename` in modificators (now it contains relative paths)
 - improved: performance of `U.request()` (around +30%)
